--- a/nlp-in-python-using-spacy-textacy.ipynb
+++ b/nlp-in-python-using-spacy-textacy.ipynb
@@ -2,10 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/msivanes/miniconda3/envs/anlp/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
+    "#conda install -c conda-forge spacy=2.1.3\n",
     "import spacy,textacy\n",
     "from spacy import displacy\n",
     "import re"
@@ -13,18 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.0.12\n",
-      "0.6.2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(spacy.__version__)\n",
     "print(textacy.__version__)"
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +124,7 @@
        "'[the, kubelet, exposes, metrics, that, can, be, collected, and, stored, in, back, ends, by, heapster.as, an, openshift, container, platform, administrator, you, can, view, a, cluster, ’s, metrics, from, all, containers, and, components, in, one, user, interface, these, metrics, are, also, used, by, horizontal, pod, autoscalers, in, order, to, determine, when, and, how, to, scale.this, topic, describes, using, hawkular, metrics, as, a, metrics, engine, which, stores, the, data, persistently, in, a, cassandra, database, when, this, is, configured, cpu, memory, and, network, based, metrics, are, viewable, from, the, openshift, container, platform, web, console, and, are, available, for, use, by, horizontal, pod, autoscalers.heapster, retrieves, a, list, of, all, nodes, from, the, master, server, then, contacts, each, node, individually, through, the, /stats, endpoint, from, there, heapster, scrapes, the, metrics, for, cpu, memory, and, network, usage, then, exports, them, into, hawkular, metrics.the, storage, volume, metrics, available, on, the, kubelet, are, not, available, through, the, /stats, endpoint, but, are, available, through, the, /metrics, endpoint, see, openshift, container, platform, via, prometheus, for, detailed, information.browsing, individual, pods, in, the, web, console, displays, separate, sparkline, charts, for, memory, and, cpu, the, time, range, displayed, is, selectable, and, these, charts, automatically, update, every, 30, seconds, if, there, are, multiple, containers, on, the, pod, then, you, can, select, a, specific, container, to, display, its, metrics.if, resource, limits, are, defined, for, your, project, then, you, can, also, see, a, donut, chart, for, each, pod, the, donut, chart, displays, usage, against, the, resource, limit, for, example, 145, available, of, 200, mib, with, the, donut, chart, showing, 55, mib, used]'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +156,7 @@
        " When this is configured, CPU, memory and network-based metrics are viewable from the OpenShift Container Platform web console and are available for use by horizontal pod autoscalers.]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -314,12 +315,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sometimes we want to create an abstract for the text. We can quickly extract the relevant nouns from the text and show shor. Noun chunks are noun phrases – not single words, but a short phrase which describes the noun."
+    "Sometimes we want to create an abstract for the text. We can quickly extract the relevant nouns from the text and show them. Noun chunks are noun phrases – not single words, but a short phrase which describes the noun."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +518,7 @@
        "[{'question': 'What is Bansoori', 'answers': [instrument]}]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +538,7 @@
        "[{'question': 'What does kubelet expose?', 'answers': [metrics]}]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,13 +546,6 @@
    "source": [
     "paragraph_to_question('The kubelet exposes metrics that can be collected and stored in back-ends by Heapster.')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
