Added an example for rule based matching to extract CLOUD_PROVIDER entity.

--- a/redhat-products-cloudproviders-ner.ipynb
+++ b/redhat-products-cloudproviders-ner.ipynb
@@ -221,6 +221,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's use the rule based matching approach provided by Spacy to create CLOUD_PROVIDER entity."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import spacy\n",
+    "from spacy.pipeline import EntityRuler\n",
+    "\n",
+    "nlp = spacy.load('en_core_web_sm')\n",
+    "ruler = EntityRuler(nlp).from_disk(\"./cloud_providers_patterns.jsonl\")\n",
+    "#print(ruler.patterns)\n",
+    "# Example patterns file - list of dictionaries with one token per dictonary\n",
+    "'''\n",
+    "{\"label\": \"CLOUD_PROVIDER\", \"pattern\": [{\"lower\": \"aws\"}]}\n",
+    "{\"label\": \"CLOUD_PROVIDER\", \"pattern\": [{\"lower\": \"amazon\"}, {\"lower\": \"web\"}, {\"lower\": \"services\"}]}\n",
+    "{\"label\": \"CLOUD_PROVIDER\", \"pattern\": [{\"lower\": \"azure\"}]}\n",
+    "{\"label\": \"CLOUD_PROVIDER\", \"pattern\": [{\"lower\": \"microsoft\"}, {\"lower\": \"azure\"}]}\n",
+    "{\"label\": \"CLOUD_PROVIDER\", \"pattern\": [{\"lower\": \"gcp\"}]}\n",
+    "{\"label\": \"CLOUD_PROVIDER\", \"pattern\": [{\"lower\": \"google\"},{\"lower\": \"cloud\"}, {\"lower\": \"platform\"}]}\n",
+    "{\"label\": \"CLOUD_PROVIDER\", \"pattern\": [{\"lower\": \"vsphere\"}]}\n",
+    "{\"label\": \"CLOUD_PROVIDER\", \"pattern\": [{\"lower\": \"vmware\"}, {\"lower\": \"vsphere\"}]}\n",
+    "'''\n",
+    "nlp.add_pipe(ruler, before=\"ner\")\n",
+    "#print(nlp.pipe_names)\n",
+    "#prints => ['tagger', 'parser', 'entity_ruler', 'ner']\n",
+    "\n",
+    "doc = nlp(u'AWS is the largest cloud provider than Azure or Google Cloud Platform or even vSphere')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('AWS', 'CLOUD_PROVIDER'), ('Azure', 'CLOUD_PROVIDER'), ('Google Cloud Platform', 'CLOUD_PROVIDER'), ('vSphere', 'CLOUD_PROVIDER')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([(ent.text, ent.label_) for ent in doc.ents])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
